tests/compile/01.stderr
error[E0277]: the trait bound `C: Sealed` is not satisfied
  --> $DIR/01.rs:17:6
   |
12 | #[sealed]
   | --------- required by this bound in `T`
13 | trait T {}
   |       - required by a bound in this
...
17 | impl T for C {}
   |      ^ the trait `Sealed` is not implemented for `C`
